<resources>
    <string name="app_name">天下鸽谱</string>
    <string name="weixin_appid">wx86455b1f11ad03d0</string>
    <string name="title_home_fragment">home</string>
    <string name="title_home_fragment2">home2</string>
    <string name="title_home_fragment3">home3</string>
    <string name="title_home_fragment4">home4</string>
    <string name="text_login_password_hint">密码</string>
    <string name="text_login">登录</string>
    <string name="text_register_at_once">立即注册</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_get_auth_code">获取验证码</string>
    <string name="text_input_auth_code">输入验证码</string>
    <string name="text_agree_and_read">我已阅读并同意</string>
    <string name="text_book_use_agreement">天下鸽谱使用协议</string>
    <string name="text_input_request_code">输入邀请码可获取鸽币（选填）</string>
    <string name="text_sure_commit">确认提交</string>
    <string name="text_password_length_hint">由6到16位包含字母数字的字符组成</string>
    <string name="text_pigeon_house_name">鸽舍名称</string>
    <string name="text_connection_phone">联系手机</string>
    <string name="text_connection_phone_m">联系手机：</string>
    <string name="text_belongs_organize">所属鸽会</string>
    <string name="text_register_shed_number">注册棚号</string>
    <string name="text_join_match_number">参赛编号</string>
    <string name="text_pigeon_house_location">鸽舍坐标</string>
    <string name="text_pigeon_house_la">鸽舍纬度</string>
    <string name="text_pigeon_house_lo">鸽舍经度</string>
    <string name="text_degree">度</string>
    <string name="text_minute">分</string>
    <string name="text_second">秒</string>
    <string name="text_location">所在省市</string>
    <string name="text_details_address">详细地址</string>
    <string name="text_go_auth">去认证</string>
    <string name="text_input_right_phone">请输入正确的手机号码！</string>
    <string name="text_input_right_auth_code">请输入正确的验证码！</string>
    <string name="text_input_right_password">请输入密码！</string>
    <string name="text_tiwce_password_not_same">两次输入密码不一致！</string>
    <string name="text_agree_agreement">请同意天下鸽谱使用协议</string>
    <string name="text_search">搜索</string>
    <string name="text_search_history">搜索历史</string>
    <string name="text_clean">清空</string>
    <string name="text_location_lo_la">E%1$s N%2$s</string>
    <string name="text_la">纬度 %1$s</string>
    <string name="text_lo">经度 %1$s</string>
    <string name="text_error_not_select_location">选择地址异常，请检查网络</string>
    <string name="title_map_location">地图定位</string>
    <string name="text_renewal_login_psd">修改登录密码</string>
    <string name="text_renewal_play_psd">修改支付密码</string>
    <string name="title_select_ass">选择协会</string>
    <string name="title_select_loft">选择公棚</string>
    <string-array name="array_org">
        <item>@string/title_select_ass</item>
        <item>@string/title_select_loft</item>
    </string-array>
    <string name="text_open_gallery">打开相册</string>
    <string name="text_open_camera">打开相机</string>
    <string-array name="array_choose_photo">
        <item>@string/text_open_camera</item>
        <item>@string/text_open_gallery</item>
    </string-array>
    <string name="text_side_effects_y">有副作用</string>
    <string name="text_side_effects_n">无副作用</string>
    <string-array name="array_side_effects">
        <item>@string/text_side_effects_y</item>
        <item>@string/text_side_effects_n</item>
    </string-array>
    <string name="text_use_effect_y">有效果</string>
    <string name="text_use_effect_n">无效果</string>
    <string-array name="array_use_effect">
        <item>@string/text_use_effect_y</item>
        <item>@string/text_use_effect_n</item>
    </string-array>
    <string-array name="array_account_security">
        <item>@string/text_renewal_login_psd</item>
        <item>@string/text_renewal_play_psd</item>
    </string-array>
    <string name="text_one_foot_input">单个足环录入</string>
    <string name="text_foots_input">按号码段录入</string>
    <string-array name="array_choose_input_foot_number">
        <item>@string/text_one_foot_input</item>
        <item>@string/text_foots_input</item>
    </string-array>
    <string name="array_pairing_add">添加配对</string>
    <string name="array_pairing_recommend">推荐配对</string>
    <string name="array_blind_date">相亲配对</string>
    <string-array name="text_breeding_info">
        <item>@string/array_pairing_add</item>
        <item>@string/array_pairing_recommend</item>
        <item>@string/array_blind_date</item>
    </string-array>
    <string name="string_lay_eggs_yes">已产蛋</string>
    <string name="string_lay_eggs_no">未产蛋</string>
    <string-array name="array_lay_eggs">
        <item>@string/string_lay_eggs_yes</item>
        <item>@string/string_lay_eggs_no</item>
    </string-array>
    <string name="string_hatches_info_yes">已出壳</string>
    <string name="string_hatches_info_no">未出壳</string>
    <string-array name="array_hatches_info">
        <item>@string/string_hatches_info_yes</item>
        <item>@string/string_hatches_info_no</item>
    </string-array>
    <string name="text_status_not_set_foot_ring">未挂环</string>
    <string name="text_status_set_foot_ring">已挂环</string>
    <string name="text_breed_pigeon">种鸽</string>
    <string name="text_racing_pigeon">赛鸽</string>
    <string-array name="array_pigeon_type">
        <item>@string/text_breed_pigeon</item>
        <item>@string/text_racing_pigeon</item>
    </string-array>
    <string name="string_about_as_tv">天下鸽谱是一款方便快捷录入并管理信鸽信息，基于中鸽网12年来高达100G的赛鸽数据进行云计算分析处理，特别推出的产品！ \n特色功能划分： \n种：足环管理，种鸽管理，血统书制作，血缘寻根。 \n养：爱鸽日记，配对牵线，病情分析，药物推荐。 \n训：记录、分析每一次训鸽成绩，优胜劣汰。 \n赛：赛鸽管理，赛鸽成绩汇总，通过云系统进行大数据全面分析赛鸽成绩，铭鸽评选。 </string>
    <string name="string_about_as_tv1">天下鸽谱是一款方便快捷录入并管理信鸽信息，基于中鸽网12年来高达100G的赛鸽数据进行云计算分析处理，特别推出的产品！</string>
    <string name="string_about_as_tv2"> 特色功能划分：</string>
    <string name="string_about_as_tv3"> 种：足环管理，种鸽管理，血统书制作，血缘寻根。 </string>
    <string name="string_about_as_tv4">养：爱鸽日记，配对牵线，病情分析，药物推荐。  </string>
    <string name="string_about_as_tv5">训：记录、分析每一次训鸽成绩，优胜劣汰。 </string>
    <string name="string_about_as_tv6"> 赛：赛鸽管理，赛鸽成绩汇总，通过云系统进行大数据全面分析赛鸽成绩，铭鸽评选。</string>
    <string name="web_title_share_txgp">分享天下鸽谱</string>
    <string name="web_title_function_intro">功能介绍</string>
    <string name="web_title_user_agreement">用户协议</string>
    <string name="web_title_play_agreement">支付协议</string>
    <string name="web_title_use_help">使用帮助</string>
    <string name="user_agree_agreement1">我已阅读并同意</string>
    <string name="user_agree_agreement2">《支付协议》</string>
    <string name="user_money_hint_num">请输入充值金额</string>
    <string name="btn_next_step">下一步</string>
    <string name="btn_save">保存</string>
    <string name="btn_sure_inport">确定导入</string>
    <string name="btn_sure_add">立即添加</string>
    <string name="btn_sure_modify">确定修改</string>
    <string name="btn_sure_upload">确定上传</string>
    <string name="str_img_upload">上传照片</string>
    <string name="str_use_vaccine_details">疫苗注射详情</string>
    <string name="str_status_illness_record_details">病情记录详情</string>
    <string name="str_drug_use_case_details">用药情况详情</string>
    <string name="str_care_drug_details">保健品详情</string>
    <string name="cpigeon_intro">中鸽助手是为中鸽网公棚和协会用户提供信息发布、赛鸽管理和比赛监控的平台。目前提供：公棚赛鸽摄像、鸽运通（比赛监控）、训鸽通（个人训放监控）、鸽信通（短信群发）等服务和公棚、协会信息发布管理等功能，一部手机搞定所有工作，简单便捷高效，节省您的时间、提高工作效率。</string>
    <string name="user_agreement">用户协议</string>
    <string name="function_introduction">功能介绍</string>
    <string name="version_information_gs">成都市中鸽科技有限公司</string>
    <string name="version_information_c" translatable="false">Copyright © 2006 - 2018 All rights reserved.</string>
    <string name="text_name">姓名</string>
    <string name="text_id_card_number">身份证号</string>
    <string name="text_sex">性别</string>
    <string name="text_family">民族</string>
    <string name="text_authority">签发机关</string>
    <string name="text_indate">有效期</string>
    <string name="text_yet_auth">已认证</string>
    <string name="title_id_card">身份证认证</string>
    <string name="text_foot_manger">足环管理</string>
    <string name="text_breed_pigeon_manger">我的种鸽</string>
    <string name="text_train_record">赛鸽训练</string>
    <string name="text_match_pigeon_manger">我的赛鸽</string>
    <string name="text_feed_pigeon_record">爱鸽管理</string>
    <string name="text_ai_pigeon_house">智能鸽舍</string>
    <string name="text_skip">跳过</string>
    <string name="text_launch_sikp">跳过 %d</string>
    <string name="text_blood_book_made">血统书制作</string>
    <string name="text_blood_book">血统</string>
    <string name="text_match_pigeon_analyse">赛鸽分析</string>
    <string name="text_blood_find">血统寻根</string>
    <string name="text_breed_info">繁育信息</string>
    <string name="text_pigeon_match_info">信鸽赛绩</string>
    <string name="text_pigeon_photo">信鸽相册</string>
    <string name="text_home">首页</string>
    <string name="text_good_pigeon">铭鸽库</string>
    <string name="text_trading_hall">交易厅</string>
    <string name="text_share_hall">共享鸽</string>
    <string name="title_pigeon_house_info">鸽舍信息</string>
    <string name="text_male">男</string>
    <string name="text_male_a">雄</string>
    <string name="text_male_pigeon">雄鸽</string>
    <string name="text_female">女</string>
    <string name="text_female_a">雌</string>
    <string name="text_female_pigeon">雌鸽</string>
    <string name="text_id_card_p">正面照片</string>
    <string name="text_id_card_n">反面照片</string>
    <string name="text_match_pigeon_train">赛鸽路训</string>
    <string name="text_breed_pigeon_input">种鸽录入</string>
    <string name="text_pigeon_take_photo">爱鸽拍照</string>
    <string name="text_match_pigeon_input">赛鸽录入</string>
    <string name="text_match_pigeon_tool">赛鸽工具</string>
    <string name="text_search_ass">点击搜索协会</string>
    <string name="text_search_loft">点击搜索公棚</string>
    <string name="text_add_foot_number">添加足环号码</string>
    <string name="text_input_foot_number_search">请输入足环号码进行搜索</string>
    <string name="text_remark">备注</string>
    <string name="text_remark_explain">备注说明</string>
    <string name="text_edit_lenth_hint">500字内</string>
    <string name="text_yuan">%1$s元</string>
    <string name="text_weixing_charge">(微信手续费%1$s元)</string>
    <string name="text_RMB">元</string>
    <string name="text_foot_details">足环详情</string>
    <string name="text_delete">删除</string>
    <string name="text_share">分享</string>
    <string name="text_delete_warning_hint">确定删除该条数据吗？</string>
    <string name="text_is_sure_delete_foot_number">是否确定删除该足环 ?</string>
    <string name="text_input_county_name_and_search">请输入国家名字进行搜索</string>
    <string name="text_area_select">区号选择</string>
    <string name="text_sure">确定</string>
    <string name="text_pleas_input">请输入</string>
    <string name="text_save">保存</string>
    <string name="text_current_weather">当前天气</string>
    <string name="text_speed">分速</string>
    <string name="text_fly_back_time">归巢时间</string>
    <string name="text_foot_number">足环号码</string>
    <string name="text_input_select">请选择</string>
    <string name="text_after_result">副作用</string>
    <string name="text_care_drug_name">保健品名称</string>
    <string name="text_care_drug_function">保健功效</string>
    <string name="text_vaccine_name">疫苗名称</string>
    <string name="text_use_vaccine_reason">注射原因</string>
    <string name="text_sure_add">确认添加</string>
    <string name="text_pleas_choose">请填写</string>
    <string name="text_current_temp">当前温度</string>
    <string name="text_current_wind_angle">当前风向</string>
    <string name="text_current_humidity">当前湿度</string>
    <string name="text_current_body_temp">体温</string>
    <string name="text_user_time">开始时间</string>
    <string name="text_user_result">使用效果</string>
    <string name="text_record_time">结束时间</string>
    <string name="text_hint">提示</string>
    <string name="text_hint_pigeon_is_death">该足环已经挂环！是否将该鸽设置为死亡状态并重新挂环？</string>
    <string name="text_death_reason">死亡原因</string>
    <string name="text_use_arm_prompt">温馨提示:注射疫苗时必须保证信鸽处于健康状态，体温正常（添加正常度数），食欲正常，排便正常，并检查口腔处于粉白状态，无粘液，正常体温为42℃，注射完毕后须给信鸽电解质或者甘精，以防应急反应。</string>
    <string name="text_direct_use">直接使用</string>
</resources>