<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_hint"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size" />

    <include layout="@layout/include_line_view_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hint_pigeon_is_death"
        android:textColor="@color/red_light"
        android:textSize="@dimen/big_text_size" />

    <com.cpigeon.book.widget.LineInputView
        android:id="@+id/lvDeathReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lineInputView_Hint="@string/text_pleas_choose"
        app:lineInputView_IsNotNull="true"
        app:lineInputView_IsCanEdit="false"
        app:lineInputView_LeftString="@string/text_death_reason" />
    
    <TextView
        android:id="@+id/tvDirectUse"
        android:background="@drawable/shape_bg_corner_3_solid_green"
        android:layout_marginTop="16dp"
        android:text="@string/text_direct_use"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCancel"
            style="@style/bottom_style_cancel"
            android:text="@string/btn_cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/tvOk"
            android:textSize="15sp"
            android:text="@string/text_sure"
            style="@style/bottom_style"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="32dp" />

    </LinearLayout>

</LinearLayout>