<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.cpigeon.book.widget.LineInputListLayout
        android:id="@+id/llRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/normal_safe_distance"
        android:paddingRight="@dimen/normal_safe_distance">

        <com.cpigeon.book.widget.LineInputView
            android:id="@+id/lvFoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lineInputView_IsNotNull="true"
            app:lineInputView_Hint="@string/text_input_select"
            app:lineInputView_IsCanEdit="false"
            app:lineInputView_LeftString="@string/text_foot_number" />

        <com.cpigeon.book.widget.LineInputView
            android:id="@+id/lvTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lineInputView_IsNotNull="true"
            app:lineInputView_IsCanEdit="false"
            app:lineInputView_Hint="@string/text_input_select"
            app:lineInputView_LeftString="@string/text_fly_back_time" />

        <com.cpigeon.book.widget.LineInputView
            android:id="@+id/lvSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lineInputView_IsCanEdit="false"
            app:lineInputView_LeftString="@string/text_speed"
            app:lineInputView_isShowRightImage="invisible" />

    </com.cpigeon.book.widget.LineInputListLayout>


    <TextView
        android:id="@+id/tvOk"
        style="@style/bottom_style"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:text="@string/text_save"
        android:textSize="@dimen/large_text_size" />
</RelativeLayout>