<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvOk"
        style="@style/bottom_style"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:text="@string/text_commit"
        android:visibility="gone" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvOk"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/include_pigeon_house_info_head" />

            <com.cpigeon.book.widget.LineInputListLayout
                android:id="@+id/llLineInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <com.cpigeon.book.widget.LineInputView
                    android:id="@+id/lvHouseName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lineInputView_IsLeft="true"
                    app:lineInputView_LeftString="@string/text_pigeon_house_name"
                    app:lineInputView_isShowEditBoard="true"
                    app:lineInputView_isShowRightImage="gone" />


                <com.cpigeon.book.widget.LineInputView
                    android:id="@+id/lvPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lineInputView_InputType="phone"
                    app:lineInputView_IsLeft="true"
                    app:lineInputView_IsNotNull="true"
                    app:lineInputView_LeftString="@string/text_connection_phone"
                    app:lineInputView_isShowEditBoard="true"
                    app:lineInputView_isShowRightImage="gone" />


                <com.cpigeon.book.widget.LineInputView
                    android:id="@+id/lvOrganize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lineInputView_DrawableRight="@mipmap/ic_select_ass_right"
                    app:lineInputView_IsLeft="true"
                    app:lineInputView_LeftString="@string/text_belongs_organize"
                    app:lineInputView_isShowEditBoard="true" />

                <com.cpigeon.book.widget.LineInputView
                    android:id="@+id/lvShedId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lineInputView_InputType="number"
                    app:lineInputView_IsLeft="true"
                    app:lineInputView_IsNotNull="true"
                    app:lineInputView_LeftString="@string/text_register_shed_number"
                    app:lineInputView_isShowEditBoard="true"
                    app:lineInputView_isShowRightImage="gone" />

                <com.cpigeon.book.widget.LineInputView
                    android:id="@+id/lvJoinMatchId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lineInputView_InputType="number"
                    app:lineInputView_IsLeft="true"
                    app:lineInputView_LeftString="@string/text_join_match_number"
                    app:lineInputView_isShowEditBoard="true"
                    app:lineInputView_isShowRightImage="gone" />

                <com.cpigeon.book.widget.LineInputView
                    android:id="@+id/lvHouseLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lineInputView_IsCanEdit="false"
                    app:lineInputView_IsLeft="true"
                    app:lineInputView_IsNotNull="true"
                    app:lineInputView_LeftString="@string/text_pigeon_house_location"
                    app:lineInputView_isShowEditBoard="true"
                    app:lineInputView_isShowRightImage="visible" />

                <com.cpigeon.book.widget.LineInputView
                    android:id="@+id/lvCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lineInputView_IsCanEdit="false"
                    app:lineInputView_IsLeft="true"
                    app:lineInputView_LeftString="@string/text_location"
                    app:lineInputView_isShowEditBoard="true"
                    app:lineInputView_isShowRightImage="visible" />

                <com.cpigeon.book.widget.LineInputView
                    android:id="@+id/lvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lineInputView_IsLeft="true"
                    app:lineInputView_LeftString="@string/text_details_address"
                    app:lineInputView_isShowEditBoard="true"
                    app:lineInputView_isShowLineDivisions="gone"
                    app:lineInputView_isShowRightImage="gone" />
            </com.cpigeon.book.widget.LineInputListLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>



